--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "calculator-reactjs",
   "version": "1.0.0",
-  "description": "My project for the Build a JavaScript Calculator challenge as part of the curriculum for the Front End Libraries Certification on Free Code Camp. Built with React.js.",
+  "description": "My project for the Build a JavaScript Calculator challenge as part of the curriculum for the Front End Libraries Certification on freeCodeCamp. Built with React.js.",
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode production",
