--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "calculator-reactjs",
   "version": "1.0.0",
-  "description": "A front-end web app that does arithmetic operations equivalent to a simple calculator. Includes keyboard functionality. Built with React.js.",
+  "description": "A front-end web app that does arithmetic operations equivalent to a simple calculator. Built with React.js.",
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode production",
